# dtr

./: .baseline-reset-publish.part00  .baseline-reset-publish.part01  .baseline-reset-publish.part02  .baseline-reset-publish.part03  .baseline-reset-publish.part04  .baseline-reset-publish.part04_00  .baseline-reset-publish.part04_01  .baseline-reset-publish.part05_00  .baseline-reset-publish.part05_01  .baseline-reset-publish.part06_00  .baseline-reset-publish.part06_01  .baseline-reset-publish.part07_00  .baseline-reset-publish.part07_01  .baseline-reset-publish.part08_00  .baseline-reset-publish.part08_01  .baseline-reset-publish.part09_00  .baseline-reset-publish.part09_01  .baseline-reset-results.part00  .baseline-reset-results.part01  .baseline-reset-results.part02  .baseline-reset-results.part03  .baseline-reset-results.part04  .baseline-reset-results.part05  .baseline-reset-results.part06  .dtr-continuation-publish.part1  .dtr-continuation-publish.part2  .dtr-continuation-publish.part3  .dtr-continuation-publish.part3a  .dtr-continuation-publish.part3b  .dtr-continuation-publish.part3c  .dtr-continuation-publish.part3d  .dtr-continuation-publish.part4  .dtr-continuation-publish.part4a  .dtr-continuation-publish.part4b  .dtr-continuation-publish.part4c  .dtr-continuation-publish.part4d  .entry-routing-publish.part00  .entry-routing-publish.part01  .entry-routing-publish.part02  .entry-routing-publish.part02a  (+20 more)
.cluster_payload/: part_00  part_01  part_02  part_03  part_04
.diagnostics/: selection-pytest.txt
changelog/: DTR-NQ-WP-20260722-11.md
changelogs/: DTR-CROSSMARKET-WP-20260722-18.md  DTR-FX-WP-20260723-22.md  DTR-FX-WP-20260724-23.md  DTR-NQ-WP-20260722-13.md  DTR-NQ-WP-20260722-14.md  DTR-NQ-WP-20260722-15.md  DTR-NQ-WP-20260722-16.md  DTR-USA500-WP-20260723-20.md
claims/: DTR-CROSSMARKET-WP-20260722-18.md  DTR-NQ-WP-20260721-01.md  DTR-NQ-WP-20260721-02.md  DTR-NQ-WP-20260721-03.md  DTR-NQ-WP-20260721-04.md  DTR-NQ-WP-20260722-05.md  DTR-NQ-WP-20260722-06.md  DTR-NQ-WP-20260722-07.md  DTR-NQ-WP-20260722-08.md  DTR-NQ-WP-20260722-09.md  DTR-NQ-WP-20260722-10.md  DTR-NQ-WP-20260722-11.md  DTR-NQ-WP-20260722-12.md  DTR-NQ-WP-20260722-13.md  DTR-NQ-WP-20260722-14.md  DTR-NQ-WP-20260722-15.md  DTR-NQ-WP-20260722-16.md  DTR-NQ-WP-20260722-19.md  DTR-USA500-WP-20260723-20.md
configs/: nq_candidate_0_1.yaml
data/: catalog.yaml
docs/: ADVANCED_CONTEXT_RESEARCH_2026-07-22.md  BASELINE_VALIDITY_RESEARCH_2026-07-22.md  BASELINE_VALIDITY_RESET_DESIGN_2026-07-22.md  CISD_ABLATION_DESIGN_2026-07-21.md  CISD_ABLATION_RESEARCH_2026-07-22.md  CONTINUATION_ENGINE_DESIGN_2026-07-21.md  (+32 more)
tests/: test_cisd.py  (+36 more)
(+618 files in other folders)
