[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dtr-optimization-lab"
version = "0.2.2"
description = "Python-first research and optimization framework for the DTR strategy"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary research code" }
authors = [{ name = "market-predictions" }]
dependencies = [
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "pyarrow>=17,<22",
  "PyYAML>=6.0,<7",
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<15",
]

[project.optional-dependencies]
research = [
  "matplotlib>=3.9,<4",
  "scipy>=1.14,<2",
  "statsmodels>=0.14,<1",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
  "pandas-stubs>=2.2",
]

[project.scripts]
dtr-audit = "dtr_lab.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dtr_lab"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
