[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dtr-optimization-lab"
version = "0.3.1"
description = "Python-first research and optimization framework for the DTR strategy"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary research code" }
authors = [{ name = "market-predictions" }]
dependencies = [
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "pyarrow>=17,<22",
  "PyYAML>=6.0,<7",
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<15",
]

[project.optional-dependencies]
research = [
  "matplotlib>=3.9,<4",
  "scipy>=1.14,<2",
  "statsmodels>=0.14,<1",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff==0.15.22",
  "mypy>=1.11,<2",
  "pandas-stubs>=2.2",
]

[project.scripts]
dtr-audit = "dtr_lab.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dtr_lab"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

# These narrowly scoped exceptions pre-date v0.2.2 and are retained as explicit debt.
# New modules and all other files remain subject to the complete rule set above.
[tool.ruff.lint.per-file-ignores]
"src/dtr_lab/research/engine.py" = ["I001", "UP035", "B905"]
"src/dtr_lab/research/integrity.py" = ["I001"]
"src/dtr_lab/research/optimize.py" = ["E501"]
